Details
-
Bug
-
Resolution: Fixed
-
Critical
-
4b9cf2e33949a107fe6567632f1ac066c44a9d2c https://git.reactos.org/?p=reactos.git;a=commit;h=4b9cf2e33949a107fe6567632f1ac066c44a9d2c
-
71,252
Description
Since somewhere between r71000 and r71500, there are multiple random errors when booting LiveCD in that environment. Successful boot rate on livecd-r73331-dbg.iso is somewhere about 10%. Most often "FreeEntry->Signature == MM_FREE_POOL_SIGNATURE" assertion. Also sometimes all text on screen is bold for some reason
Virtual PC 2007 SP1, host system is Windows XP
Attachments
Issue Links
- blocks
-
CORE-11157 Update UniATA in trunk and in 0.4.1 branch to 0.46d7 version
-
- Resolved
-
-
CORE-17490 AddDevice function not called for isapnp driver
-
- Resolved
-
-
CORE-17636 Live CD on Virtual PC 2007: Uses 4-bit color depth instead of 32-bit
-
- Resolved
-
-
CORE-17640 Virtual PC VM Additions: Installer dies silently
-
- Resolved
-
-
CORE-13180 Virtual PC 2007 SP1, two VGA cards listed
-
- Resolved
-
- is blocked by
-
CORE-12121 Buffer overrun in FsRtlIsNameInExpressionPrivate
-
- Resolved
-
- is duplicated by
-
CORE-17371 [Virtual PC 2004] UniATA v0.46+: Near permanent "random" crashes during boot
-
- Resolved
-
-
CORE-14567 Random BSODs when booting in Virtual PC 2007 SP1
-
- Resolved
-
- relates to
-
CORE-16198 ReactOS does not boot in Hyper-V (Generation 1) on Windows 10
-
- Resolved
-