[0.4.14][UNIATA] Workaround random crashes on Virtual PC (#3377)

I am not sure why this line in id_queue.cpp was added.
I don't know how I could improve that case.
Then, disable it, for the time being.

It regressed by 4b9cf2e (r71252). CORE-12441 CORE-17371

picked from 0.4.15-dev-2740-g ba77a09c04a02841a6b88428697bd725402c1b9d

While touching UNIATA port back also some bm_devs.h changes:
0.4.15-dev-2739-g d65d4137d36d4053812ff6daee85f734ce83b248 (8086:7111 is really PIIX4, not PIIX3)
and
0.4.15-dev-1522-g 88d36c93a27f5d764027e2475c84bdde1a84c4a6 (Properly mark ReactOS diff from upstream)